--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorStatusBar">#000000</color>
+    <color name="colorAppBar">#212121</color>
+    <color name="colorBackground">#303030</color>
+    <color name="colorDialogAndCard">#424242</color>
 </resources>
