Can now navigate to the fragment Dialog

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -22,7 +22,12 @@
         android:id="@+id/button_load_new_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorButtonPrimary"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="Load Image"
+        android:textColor="@color/colorTextPrimary"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
