--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -22,7 +22,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            tools:src="@drawable/place_holder" />
 
         <Button
             android:id="@+id/button_load_new_image"
@@ -31,7 +31,7 @@
             android:background="@color/colorButtonPrimary"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:text="Load Image"
+            android:text="@string/load_image"
             android:textColor="@color/colorTextPrimary"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
