Recycler View and Item Loading Online!!!!!!!

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -50,14 +50,16 @@
             app:layout_constraintGuide_percent="0.80" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_images"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="4dp"
             android:background="@color/colorButtonPrimary"
             android:foregroundGravity="center"
-            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintTop_toTopOf="@+id/guideline"
+            app:layout_constraintVertical_bias="0.428" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
